third_party/rust/indoc/v1/crate/tests/ui/printdoc-extra-arg.stderr
error: argument never used
 --> $DIR/printdoc-extra-arg.rs:4:19
  |
4 |     printdoc!("", 0);
  |               --  ^ argument never used
  |               |
  |               formatting specifier missing
