third_party/rust/indoc/v1/crate/tests/ui/printdoc-extra-arg.rs
use indoc::printdoc;

fn main() {
    printdoc!("", 0);
}
